# liquid_primes

./: .gitignore  README.md  pyproject.toml
liquid_primes/: __init__.py  __main__.py  pitches.py  primes.py  score.py  utils.py
liquid_primes/drawscoreassvg/: __init__.py  __main__.py  config.py  create_score.py  draw_score.py  model.py
liquid_primes/liquid_primes/: export.py
liquid_primes/palette/: __main__.py  export.py  pitches.py  primes.py  utils.py
liquid_primes/score/: create_score.py  create_score_with_gliss.py  mapping_to_drawable.py  mapping_to_sc_json.py  model.py
liquid_primes/scripts/: create_events.py  demo.py  multiple_sections.py  utils.py  write_events_to_json.py  write_events_to_svg.py
src/: __main__.py  main.py  pitches.py  primes.py  score.py
src/liquid_primes/: export.py  pitches.py  primes.py  score.py  score_abjad.py  utils.py
tests/: test_data_expected_score.json  test_funcs.py  test_json_export.py  test_palette.py  test_primes.py  test_score.py
