[tool.poetry]
name = "liquid-primes"
version = "0.1.0"
description = ""
authors = ["Terje Sylvarnes <fuzzklang@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
sympy = "^1.12"
music21 = "^9.1.0"
pygame = {version = "^2.5.2", optional = true}

[tool.poetry.extras]
playback = ["pygame"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-s"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
ignore = ["B311"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
